fixed more layout issues

--- a/src/css/Education.css
+++ b/src/css/Education.css
@@ -19,17 +19,18 @@
     font-weight: 700;
     margin: auto;
     color: #248277;
+    padding-bottom: 2rem;
 }
 
 .title-span {
     display: table;
     margin: 0 auto;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 55px;
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 40px;
     font-weight: 500;
     padding-left: 30px;
 
@@ -37,17 +38,17 @@ h2 {
 
 .graduate, .text {
     padding-top: 15px;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 100;
     padding-left: 70px;
 }
 
 .edu-div {
-    padding-bottom: 30px;
+    padding-bottom: 1rem;
 }
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 720px) {
 
     .container {
         width: 90%;
@@ -55,6 +56,7 @@ h2 {
 
     .sec-title {
         width: 100%;
+        padding-bottom: 0;
     }
 
     .title-span {
