--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -13,9 +13,9 @@
 
 .bitmoji {
     grid-area: bitmoji;
-    height: 100%;
+    height: 70%;
     margin: auto;
-    padding-top: 1.25rem;
+    padding-top: 0.5rem;
 }
 
 .logos, .logos-mobile {
@@ -30,7 +30,7 @@
     margin: auto;
     padding-top: 1rem;
     font-weight: 800;
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 3%;
 }
 
@@ -40,8 +40,8 @@
     left: 50%;
     font-weight: 600;
     padding-left: 30px;
-    margin-top: 20%;
-    font-size: 2rem;
+    margin-top: 31%;
+    font-size: 70px;
 }
 
 *,
@@ -62,8 +62,8 @@
     display: flex;
     position: absolute;
     right: 48%;
-    margin-top: 20%;
-    padding-right: 40px;
+    margin-top: 31%;
+    padding-right: 20px;
     
 }
 .words{
@@ -75,8 +75,8 @@
     color: #06d6a0;
     animation: spin_words 2s infinite;
     font-weight: 600;
-    padding-right: 20px;
-    font-size: 2rem;
+    padding-right: 15px;
+    font-size: 70px;
 }
 
 .back {
@@ -90,7 +90,7 @@
 
 .row-1 td *, .row-2 td *{
     padding-left: 25px;
-    font-size: 35px;
+    font-size: 30px;
     margin: auto;
 }
 
@@ -99,7 +99,7 @@
 }
 
 .logos td *{
-    height: 1.5rem;
+    height: 65px;
 }
 @keyframes spin_words{
     15%{
@@ -117,7 +117,7 @@
     
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 720px) {
     .wrapper, .developer {
         padding-top: 8rem;
     }
