--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -26,7 +26,7 @@
     grid-area: profile;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 720px) {
     .home-container {
         width: 100%;
     }
