--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -3,5 +3,5 @@
 }
 
 .paragraph {
-    padding-bottom: 30px
+    padding-bottom: 1rem;
 }
